--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.udacity.sandwichclub.DetailActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="16dp">
@@ -18,6 +18,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/sandwich_picture_content_description"
             android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -28,22 +29,18 @@
             android:layout_marginStart="16dp"
             android:text="@string/detail_also_known_as_label"
             android:textStyle="bold"
+            android:layout_below="@+id/image_iv"
             app:layout_constraintBaseline_toBaselineOf="@+id/also_known_tv"
             app:layout_constraintStart_toStartOf="parent" />
 
 
         <TextView
             android:id="@+id/also_known_tv"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/alsoKnownAs_label"
-            app:layout_constraintTop_toBottomOf="@+id/image_iv"
+            android:layout_below="@+id/alsoKnownAs_label"
+            android:layout_marginTop="1dp"
+            android:layout_toRightOf="@id/alsoKnownAs_label"
             tools:text="Lorem Ipsum" />
 
         <TextView
@@ -117,5 +114,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ingredients_label"
             tools:text="\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum \n\u2022 Lorem Ipsum" />
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 </ScrollView>
