--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,14 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="216dp"
-        android:src="@drawable/bg"/>
+        android:src="@drawable/bg"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"/>
 
     <ListView
         android:id="@+id/sandwiches_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="216dp"
-        android:paddingTop="10dp"/>
+        android:layout_marginTop="216dp" />
 
 </RelativeLayout>
